<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp">

        <TextView
            android:id="@+id/Inventory"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/inventory_below" />

        <EditText
            android:id="@+id/Inv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_1"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Inv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_2"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Inv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_3"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Inv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_4"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Inv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_5"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            android:id="@+id/SaveInv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>